# ACAS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ToDO.txt  acas.html  config.py  dashboard_lgbm_adapter.py  data_pipeline.py  evaluate_models.py  lgbm_inference_engine.py  model.py  must.txt  pyproject.toml  requirements.txt  satellite_model.json  satellite_process.py  submission.txt
api/: endpoint.py
config/: thresholds.yaml
core/: controller.py  maneuver_planner.py  risk_scorer.py
dashboard/: adapter.py  app.py
data/: conjunction_finder.py  data_pipeline.py  tle_fetcher.py
data_files/: .gitkeep  satellite_model.json
docs/: api.md  architecture.md
model/: __init__.py  config.py  evaluate.py  inference.py  lgbm_engine.py  lgbm_model.py  train.py
models/: conjunction_net.py  maneuver_planner.py  risk_scorer.py
onboard/: acas_controller.py
outputs/models/: .gitkeep
pipeline/: model_bridge.py  tle_processor.py
simulator/: orbital.py
test/: test_conjunction_finder.py  test_conjunction_net.py  test_tle_fetcher.py
tests/: test_model_accuracy.py  test_risk_scorer.py
trained_models/: conjunction_model.onnx  conjunction_model.onnx.data  conjunction_model.pt  encoders.pkl
trained_models/lgbm/: .gitkeep
trained_models/rl/: .gitkeep
